# Cargo-RamDrive

./: README.md
Documents/PowerShell/: Microsoft.PowerShell_profile.ps1
Windows/: delete-vscode-context-menu.reg  install.reg  uninstall.reg
Windows/Documents/PowerShell/: Set-Location.psm1
Windows/startup/: ramdisk.bat
vscode-custom-build-launcher/: Cargo.toml  build.rs
vscode-custom-build-launcher/src/: main.rs
